fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,7 @@ height: 4.375rem;
 }
 
 .introduction h3 {
+	margin-top: 1.25rem;
 font-size: 1.4rem;
 font-weight: 100;
 }
